--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -84,7 +84,7 @@
 	.nav__menu {
 		position: fixed;
 		flex-direction: column;
-		background: #fff;
+		background: #000;
 		width: 100%;
 		height: 110vh;
 		text-align: center;
@@ -93,7 +93,7 @@
 		left: 0%;
 	}
 	.nav__menu.active {
-		top: -55%;
+		top: -5%;
 	}
 	.menu__link {
 		margin: 2.5rem 0rem;
