--- a/css/style.css
+++ b/css/style.css
@@ -7,21 +7,21 @@
 	box-sizing: border-box;
 }
 body {
-    background-color: #f5f5f7;
+    background-color: #fff;
     color: #fff;
     margin: 0px;
     padding: 0px;
-    height: 3000px;
-    max-width: 3456px;
+    height: auto;
+    max-width: auto;
     font-size: 10px;
+    font-family: sans-serif;
 }
 
 /*---------------srollbar-----------------*/
 
 /* width */
 ::-webkit-scrollbar {
-    width: 0.5em !important;
-    scroll-behavior: smooth !important;
+    width: 0.4em;
 }
     /* Track */
 ::-webkit-scrollbar-track {
@@ -29,7 +29,7 @@ body {
 }
     /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: #2c2c2c;
+    background: #3c3c3c;
 } 
 
 li{
@@ -38,7 +38,20 @@ li{
 a{
     text-decoration: none;
 }
-
+input[type="search"]::-webkit-search-cancel-button {
+	-webkit-appearance: none;
+	height: 1em;
+	width: 1em;
+	border-radius: 50em;
+	background: url(/img/times-circle.svg) no-repeat 50% 50%;
+	background-size: contain;
+	opacity: 0.5;
+	pointer-events: none;
+}
+input[type="search"]:focus::-webkit-search-cancel-button {
+	opacity: .4;
+	pointer-events: all;
+}
 header {
 	position: fixed;
 	display: flex;
@@ -47,9 +60,9 @@ header {
 	width: 100%;
 	height: 45px;
 	max-height: 120px;
-	background-color: #2C2C2C;
-	opacity: .9;
+	background: rgba(44, 44, 44, .95);
 	color: #fff;
+	z-index: 5;
 }
 
 .header__wrapper_content {
@@ -69,13 +82,17 @@ header {
 	font-size: 2em;
 	font-family: 'Kalam', cursive;
 }
+.logo:hover {
+	color: #cdcdcd;
+}
 
 .menu {
 	display: flex;
+	align-items: center;
 	justify-content: space-around;
-	font-size: 1.1em;
+	font-size: 1.2em;
 	font-weight: normal;
-	font-family: 'Laila', serif;
+	font-family: sans-serif;
 	letter-spacing: 0px;
 	color: #fff;
 }
@@ -102,8 +119,8 @@ header {
 }
 
 .menu a:hover {
-	color: #ff0000;
-	transition: .2s;
+	transition: .1s;
+	color: #cdcdcd;
 }
 /*!!!!! Mobile menu !!!!!*/
 .hamburger {
@@ -125,18 +142,20 @@ header {
 .mobile__profile-button {
 	display: none;
 	font-size: 1.5em;
+	align-self: center;
 }
 .mobile__profile-button a {
 	color: #fff;
 }
-/*--------search form---------*/
-.search-from__wrapper {
+/*--------search form mobile---------*/
+.search-form__wrapper {
 	display: flex;
 	border-radius: 10px;
 	border: none;
 	background-color: inherit;
 }
 .search-btn-mobile {
+	display: none;
 	color: #fff;
 	font-size: 1em;
 	background: inherit;
@@ -153,29 +172,95 @@ header {
 	display: flex;
 	justify-content: center;
 }
-.menu input[type="search"]::-webkit-search-cancel-button {
-	-webkit-appearance: none;
-	height: 1em;
-	width: 1em;
-	border-radius: 50em;
-	background: url(https://pro.fontawesome.com/releases/v5.10.0/svgs/solid/times-circle.svg) no-repeat 50% 50%;
-	background-size: contain;
-	opacity: 0;
-	pointer-events: none;
+/*--------search form pc---------*/
+
+.search__pc-block {
+	display: none;
 }
-input[type="search"]:focus::-webkit-search-cancel-button {
-	opacity: .4;
-	pointer-events: all;
+.search__pc-block.active {
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	width: 70%;
+	height: 100%;
 }
+.search__open-pc{
+	color: #fff;
+	font-size: 1em;
+	padding: 0px;
+	background: inherit;
+	border: none;
+	cursor: pointer;
+}
+
+.search-form__wrapper-pc {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: auto;
+}
+.search-form__wrapper-pc .search-btn-pc{
+	background-color: inherit;
+	border: none;
+	color: #fff;
+	font-size: 12px;
+	padding-right: 10px;
+	align-self: center;
+}
+.search-form__wrapper-pc input {
+	width: 50%;
+	background-color: inherit;
+	color: #fff;
+	font-size: 15px;
+	outline: none;
+	border: none;
+}
+.search-form__wrapper-pc input[type="search"]::-webkit-search-cancel-button {
+	display: none;
+}
+.search-form__wrapper-pc .btn__close {
+	color: #fff;
+	background-color: inherit;
+	font-size: 15px;
+	cursor: pointer;
+	border: none;
+}
+/*-----alert don't buy it-----*/
+.alert_dont_buy_it {
+	width: 100%;
+	height: 23px;
+	background-color: #444;
+	opacity: 1;
+	padding: 0px 15%;
+	display: flex;
+	justify-content: space-between;
+	position: fixed;
+	margin-top: 45px;
+	z-index: 5;
+}
+.alert_dont_buy_it span {
+	align-self: center;
+	font-size: 11px;
+	color: #ddd;
+}
+.alert_dont_buy_it button {
+	border: none;
+	background-color: inherit;
+	color: #fff;
+	align-self: center;
+	font-size: 1.2em;
+	cursor: pointer;
+}
+/*-------------------------------- Main --------------------------------*/
 /*-----------------------Banner after header---------------------*/
 
 .Banner__with-something-new {
 	display: flex;
 	justify-content: center;
 	width: 100%;
-	max-width: 3456px;
 	height: 100vh;
-	background-image: url(../img/banner-second-home.jpg);
+	background: url(../img/banner-main-home.jpg) no-repeat center center;
 	background-size: cover;
 	background-repeat: no-repeat;
 }
@@ -188,7 +273,8 @@ input[type="search"]:focus::-webkit-search-cancel-button {
 	justify-content: space-around;
 	align-self: center;
 	font-family: 'Laila', sans-serif;
-	color: #eaeaea;
+	color: #fff;
+	cursor: default;
 }
 
 .title__main-in-Banner {
@@ -201,16 +287,109 @@ input[type="search"]:focus::-webkit-search-cancel-button {
 
 .Button__learn-more {
 	width: 120px;
-	background-color: #eaeaea;
+	background-color: #fff;
 	color: #000;
 	font-size: 1.3em;
 	font-weight: bold;
 	text-align: center;
 	padding: 5px;
 	margin-top: 15px;
+	border: 2px solid #fff;
 	border-radius: 20px;
 }
 .Button__learn-more:hover {
+	transition: .6s;
+	background-color: inherit;
+	color: #fff;
+	border: 2px solid #fff;
+}
+/*cards prod blocks*/
+.title_pre__cards {
+	width: 100%;
+	text-align: center;
+	padding: 20px 0px;
+	color: #9c9c9c;
 	background-color: #fff;
-	transition: .4s;
+	font-size: 2.5em;
+	font-family: 'Kalam', cursive;
+}
+.cards__main {
+	display: flex;
+	justify-content: center;
+	z-index: 2;
+	position: relative;
+	width: 100%;
+	height: auto;
+	background-color: #fff;
+}
+.cards__main button {
+	visibility: hidden;
+	background-color: inherit;
+	border: none;
+	color: #ddd;
+	opacity: .5;
+	font-size: 3em;
+	padding: 1%;
+	cursor: pointer;
+	transition: .5s;
+}
+.cards__main button:hover {
+	color: #888;
+}
+.cards__main:hover button{
+	visibility: visible;
+}
+
+
+.wrapper__cards__slider {
+	display: flex;
+	justify-content: space-around;
+	width: 80%;
+	margin: 0px;
+	z-index: 4;
+}
+
+.card {
+	display: flex !important;
+	flex-direction: column !important;
+	justify-content: center !important;
+	text-align: center;
+	width: auto;
+	height: auto;
+	background-color: #f5f5f7;
+	border-radius: 20px;
+	padding: 0px;
+	margin-bottom: 10px;
+	font-family: sans-serif;
+	transition: .3s;
+	z-index: 4;
+}
+.card:hover {
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+.card:hover a {
+	color: #06c ;
+}
+.wrapper_for_img {
+	display: flex;
+	justify-content: center;
+}
+.wrapper_for_img img {
+	width: 80%;
+	margin-top: 15%;
+}
+.card_name_product {
+	margin-top: 20px;
+}
+.card_name_product a {
+	font-size: 1.3em;
+	font-weight: bold;
+	color: #444;
+}
+.card_price_product {
+	font-weight: lighter;
+	font-size: 1.5em;
+	color: #777;
+	margin-top: 10px;
+	margin-bottom: 15%;
 }
